# samples

./: README.md
.github/templates/01-tutorials/: readme.md  structure.md
python/01-learn/: README.md
python/01-learn/02-tools-and-mcp/01-using-mcp-tools/: mcp-agent.ipynb
python/01-learn/06-memory/: requirements.txt
python/01-learn/14-plugins/: README.md  plugins-in-strands.ipynb
python/01-learn/17-conversation-management/: README.md  conversation-management.ipynb  requirements.txt
python/04-industry-use-cases/finance/whatsapp-fintech/: template.yaml
python/07-ux-demos/ag-ui-copilotkit-integration/: .env.example  .gitignore  README.md  start.sh
python/07-ux-demos/ag-ui-copilotkit-integration/agent/: main.py  pyproject.toml  tools.py
python/07-ux-demos/ag-ui-copilotkit-integration/agent/knowledge/: best-practices.md  concepts.md  getting-started.md
python/07-ux-demos/ag-ui-copilotkit-integration/frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
python/07-ux-demos/ag-ui-copilotkit-integration/frontend/src/app/: globals.css  layout.tsx  page.tsx
python/07-ux-demos/ag-ui-copilotkit-integration/frontend/src/app/api/agent-proxy/: route.ts
python/07-ux-demos/ag-ui-copilotkit-integration/frontend/src/components/: quiz-card.tsx  source-card.tsx
python/07-ux-demos/ag-ui-copilotkit-integration/frontend/src/lib/: utils.ts
python/07-ux-demos/slack-assistant/: .dockerignore  .gitignore  .slack_secrets.example  Dockerfile  README.md  app.py  cleanup.sh  deploy.sh  infra.yaml  manifest.json  pyproject.toml  run.sh
(+1 files in other folders)
