[project]
name = "ag-ui-strands-sample"
version = "0.1.0"
description = "Strands Agent with AG-UI integration for CopilotKit"
requires-python = ">=3.12,<3.14"
dependencies = [
    "strands-agents>=0.1.0",
    "ag-ui-strands>=0.1.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
